MDX page programmatically

--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -1,14 +1,23 @@
+---
+title: Gatsby Tutorial
+slug: gatsby-tutorial
+image: ./images/gatsby-1.png
+date: 2021-04-16
+author: George Nikoglou
+category: Gatsby
+readTime: 20
+---
+
+
 import { Link } from 'gatsby'
 import {FiInfo} from 'react-icons/fi'
-import {Counter,LikeButton} from '../components/Complete'
+import {Counter,LikeButton} from '../../components/Complete'
 
 
-<section className="mdx-page">
 
-<h1>Hello</h1>
-<Link to="/posts" className="btn center-btn">
-    All Posts
-</Link>
+## Post n10
+
+**hello** again from the post 10
 
 <div className="nice-text">
 
@@ -59,4 +68,3 @@ const LikeButton = () => {
 
 
 
-</section>
