--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -1,6 +1,7 @@
 import { Link } from 'gatsby'
 import {FiInfo} from 'react-icons/fi'
-import {Counter,LikeButton} from '../components/Complete'
+import {Counter,LikeButton,RegVideo,Video} from '../components/Complete'
+
 
 
 <section className="mdx-page">
@@ -57,6 +58,8 @@ const LikeButton = () => {
 
 <LikeButton />
 
-
+<h2>Video Components</h2>
+<RegVideo />
+<Video />
 
 </section>
