--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -61,5 +61,7 @@ const LikeButton = () => {
 <h2>Video Components</h2>
 <RegVideo />
 <Video />
+<h2 title="true">Title h2</h2>
+<h2>regular h2</h2>
 
 </section>
