--- a/src/pages/post.mdx
+++ b/src/pages/post.mdx
@@ -2,11 +2,8 @@ import { Link } from 'gatsby'
 import {FiInfo} from 'react-icons/fi'
 import {Counter,LikeButton,RegVideo,Video} from '../components/Complete'
 
-
-
 <section className="mdx-page">
 
-<h1>Hello</h1>
 <Link to="/posts" className="btn center-btn">
     All Posts
 </Link>
@@ -61,7 +58,97 @@ const LikeButton = () => {
 <h2>Video Components</h2>
 <RegVideo />
 <Video />
-<h2 title="true">Title h2</h2>
+<h2 title>Title h2</h2>
 <h2>regular h2</h2>
+<h4>inline code</h4>
+
+`console.log('hello there')`
+
+<h4>blockquote element</h4>
+
+<blockquote display="default">
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+</blockquote>
+
+<blockquote display="info">
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+</blockquote>
+
+<blockquote display="warning">
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+</blockquote>
+
+<blockquote >
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+crucifix poutine chillwave jianbing live-edge. 
+Taxidermy put a bird on it enamel pin asymmetrical 
+</blockquote>
+
+#### JSX
+
+```jsx
+import React from "react"
+
+const Counter = () => {
+  const [count, setCount] = React.useState(0)
+  return (
+    <section className="counter">
+      <h4>show some love to MDX</h4>
+      <h4>likes {count}</h4>
+      <button className="btn btn-danger" onClick={() => setCount(count + 1)}>
+        i like mdx
+      </button>
+    </section>
+  )
+}
+export default Counter
+```
+
+#### HTML
+
+```html
+<h1>hello world</h1>
+<p class="random">random text</p>
+<section class="contact">
+  <div class="title">
+    <h1>contact us</h1>
+  </div>
+</section>
+```
+
+#### CSS
+
+```css
+max-width: 500px;
+border-radius: var(--radius);
+padding: 1rem 1.5rem;
+background: var(--clr-grey-10);
+text-align: center;
+```
+
+#### Javascript
+```js
+// comments
+const name = "john"
+const channel = "coding addict"
+
+function featuredProducts(data) {
+  return data.filter(item => {
+    return item.featured === true
+  })
+}
+featuredProducts()
+```
+
 
 </section>
+
+
+
+
